fix: botton margin not default 0 on safari

--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -7,7 +7,6 @@ dl, dd, ol, ul, figure {
     margin: 0;
     padding: 0;
 }
-
 h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
@@ -15,16 +14,11 @@ ul, ol, dl, figure,
     margin: $base-font-size / 2 0;
 }
 
-/**
- * Basic styling
- */
 html {
     height: 100%;
 }
-
 body {
     height: 100%;
-
     ::-moz-selection {
         background: $select-color;
     }
@@ -36,17 +30,6 @@ body {
     }
 }
 
-/**
- * Clearfix
- */
-%clearfix {
-    &:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
-}
-
 .clearfix {
     &:after {
         content: "";
@@ -54,11 +37,9 @@ body {
         clear: both;
     }
 }
-
 .left {
     float: left;
 }
-
 .right {
     float: right;
 }
@@ -68,6 +49,7 @@ button {
     outline: none;
     background-color: transparent;
     padding: 0;
+    margin: 0;
     border-width: 0;
     font-size: $base-font-size;
 }
